--- a/layout/kontak.html
+++ b/layout/kontak.html
@@ -10,19 +10,19 @@
 <body>
 	<div id="cointainer">
 		<header><h1>Layout Sederhana</h1></header>
-		
+
 	<nav>
 		<a href="home.html" class="archive">Home</a>
 		<a href="artikel.html">Artikel</a>
 		<a href="about.html">About</a>
 		<a href="kontak.html">Kontak</a>
 	</nav>
-	
+
 	<section id="hero">
 		<h1>Kontak</h1>
-		<p>	Anda dapat menghubungi saya dengan beberapa cara.</p>
+		<p>	Anda dapat menghubungi saya Bagus tri handono dengan beberapa cara.</p>
 	</section>
-	
+
 	<section id="wrapper">
 		<section id="main">
 			<div class="row">
@@ -32,22 +32,22 @@
 					<a href="#" class="btn btn-default">View detail</a>
 				</div>
 				<div class="box">
-				  <img src="walogo.png" alt="" class="image-circle" />
-				  <h3>085808406065</h3>
+				  <img src="iglogo.png" alt="" class="image-circle">
+				  <h3>@bag602</h3>
 					<a href="#" class="btn btn-default">View detail</a>
-			  </div><div class="box">
-					<img src="iglogo.png" alt="" class="image-circle">
-					<h3>@bag602</h3>
+			  </div>
+				<div class="box">
+					<img src="gmaillogo.png" width="200px" alt="" class="image-circle">
+					<h3 tex-align"center">bagustri00@mhs.pelitabagsa.ac.id</h3>
 					<a href="#" class="btn btn-default">View detail</a>
 				</div>
 			</div>
 		</section>
-	</section>>
-	
+	</section>
 	<footer>
 			<p>&copy;2022 - Universitas Pelita Bangsa</p>
 	</footer>
-	
+
 	</div>
 </body>
 </html>
